<resources>
    <string name="app_name">Todo List</string>
    <string name="someting_went_wrong">Someting went wrong</string>
    <string name="give_it_another_try">Give it another try</string>
    <string name="retry">Reload</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Todo List</string>
    <string name="menu_about">About</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="developed_by">- Developed by Deepak Bhardwaj</string>
    <string name="app_info">This app is a todo application, the user will be able to see the list of todo task with the status whether it is completed or not.</string>
    <string name="dark_mode">Dark Theme</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
</resources>