<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_todolist"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about" />

    </group>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/darkmode_btn"
                android:icon="@drawable/ic_menu_switch"
                app:actionLayout="@layout/layout_switch"
                android:title="@string/dark_mode" />
            <item
                android:id="@+id/exit_btn"
                android:icon="@drawable/ic_menu_exit"
                android:title="@string/exit"/>
        </menu>
    </item>

</menu>