<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.home.HomeFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:id="@+id/error_page"
        android:gravity="center">

        <TextView
            android:id="@+id/swwLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/someting_went_wrong"
            android:textStyle="bold"
            android:textSize="30dp"
            android:textColor="?attr/colorOnPrimary"/>

        <TextView
            android:id="@+id/tryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/give_it_another_try"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/retryBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:textColor="#1E88E5"
            android:text="@string/retry" />
    </LinearLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <include layout="@layout/shimmer_placeholder_layout"/>
            <include layout="@layout/shimmer_placeholder_layout"/>
            <include layout="@layout/shimmer_placeholder_layout"/>
            <include layout="@layout/shimmer_placeholder_layout"/>
            <include layout="@layout/shimmer_placeholder_layout"/>
            <include layout="@layout/shimmer_placeholder_layout"/>
            <include layout="@layout/shimmer_placeholder_layout"/>
            <include layout="@layout/shimmer_placeholder_layout"/>
            <include layout="@layout/shimmer_placeholder_layout"/>
            <include layout="@layout/shimmer_placeholder_layout"/>
            <include layout="@layout/shimmer_placeholder_layout"/>
            <include layout="@layout/shimmer_placeholder_layout"/>
            <include layout="@layout/shimmer_placeholder_layout"/>
            <include layout="@layout/shimmer_placeholder_layout"/>
            <include layout="@layout/shimmer_placeholder_layout"/>
        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_container"
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/customRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>